--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "myntra",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://github.com/Sanjay-PS/react-host-test-with-bootstrap",
+  "homepage": "https://sanjay-ps.github.io/react-host-test-with-bootstrap/",
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
